--- a/main.css
+++ b/main.css
@@ -1,16 +1,35 @@
 body {
-  background-color: #3b3838;
+  background-color: #010101;
 }
 
 #createBtnContainer {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   padding: 20px 0;
 }
+
+.logo {
+  height: 80px;
+}
+
+.logo-container {
+  display: inline;
+}
+
 
 form {
   display: flex;
   flex-direction: column;
+}
+
+.btn-secondary {
+  background: #FFFFFF14;
+}
+
+.btn-light {
+  background: #FFFFFF14;
+  color: white;
+  padding: -10px 10px;
 }
 
 .buttonRow {
@@ -19,7 +38,8 @@ form {
 
 iframe {
   width: 100%;
-  height: 500px;
+  height: 600px;
+  
 }
 
 /* MEDIA QUERY FOR SMALL SCREENS  */
